# calculator-calculator

./: .gitignore  CHANGELOG.md  README.md  calculator-solver.cabal  tests.txt
app/: Main.hs  Move.hs  Password.hs  Util.hs  calc.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
