cabal-version:      2.4
name:               calculator-solver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Spencer Gouw
maintainer:         swyverng55@g.ucla.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable calculator-solver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Calc, Move, Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, 
                      split >=0.2.3.4,
                      text >= 2.0
    hs-source-dirs:   app
    default-language: Haskell2010
